Generalize parameterized tests
Many parameterized tests included the configuration option to specify
the backing cache implementation (Caffeine or Guava). This was mostly
for cases testing Caffeine-specific features. This is now better
inferred by the generator by inspecting the argument types, allowing
the tests to be more generic by constraining only their behavior.